--- a/ebook.html
+++ b/ebook.html
@@ -76,23 +76,22 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
     </div>
 </nav> 
 <h3 class="gfonts">WARNING!!! DO NOT GET A<span style="color:red;"> PROSTATE DRUG OR SUPPLEMENT</span> UNTIL YOU READ THIS SHOCKING EBOOK</h3>
+<img class="cover" src="img/cover.jpg"><br>
 <p><b>IN THIS FREE EBOOK YOU WILL GET TO KNOW</b></p>
 <ul style="list-style-type:square; padding-right:2px; font-weight:bold;">
 <li style = "text-transform : uppercase;">What You Dont Know About Prostate Medication That Could Cost You Hundreds Of Thousands And Threaten The Financial Health Of Your Prostate</li>
 <li> 6 THINGS NO UROLOGIST OR ANY HEALTH MARKETER WOULD DARE TELL YOU</li>
 <li>WHY ENLARGE PROSTATE REDUCE AND GROW BACK AND HOW TO STOP IT</li>
-<li>HOW TO SHRINK ENLARGED PROATATE WITHOUT A STRICT DIET PLAN</li>
+<li>HOW TO SHRINK ENLARGED PROSTATE WITHOUT A STRICT DIET PLAN</li>
 <li>SKIPING DINNER GOOD FOR ENLAGED PROSTATE,right&#63;WRONG&#33 </li>
 <li>LYCOPENE VS SAW PALMETO VS TUMERIC CURCUMIN? WHICH IS REALLY EFFECTIVE?</li>
 <li>WHERE TO FIND THE RIGHT DRUG OR SUPPLEMENT</li>
 <li>SAY GOODBYE TO BATHROOM NIGHT</li>
 </ul>
 
-<img class="cover" src="img/cover.jpg"><br>
 
 <div class="form-container">
-
-      <form action"https://formspree.io/f/myyongpr" name="myForm"
+      <form action = "https://formspree.io/f/xeqvnlve" name="myForm"
       onsubmit = "return(validate())"
       method = "POST">
       	GET A FREE COPY OF OUR EBOOK BELOW<br> <br>
@@ -103,7 +102,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
          
          <div class="input-cnt">
             <i class="material-icons">email</i>
-            <input id="email" type="email" placeholder="Email" name="email" required/>
+            <input id="email" type="email" placeholder="Email" name="email" />
          </div>
          
          <div class="input-cnt">
@@ -112,7 +111,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
              minlenght="11" pattern="\d{11}"  required/>
          </div>
         <div class="freebook">
-        <button class="getebook" onclick="submit(e)"><b>GET THE EBOOK NOW!</button> </b>
+        <button class="getebook" onclick="submit(e)"><b>GET THE EBOOK NOW!</button></b>
         </div><br><br>
             </form></div>
 
