--- a/ebook.html
+++ b/ebook.html
@@ -55,14 +55,14 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-md">
-   <a class="navbar-brand" href="index.html">
+<nav class="navbars navbar-expand-md">
+   <a class="navbars-brand" href="index.html">
    <img class="logo" src="img/logo.png" alt="PROSTATE SOLUTION"/></a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-      	   <span class="navbar-toggler-icon"></span>
+        <button class="navbars-toggler navbars-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+      	   <span class="navbars-toggler-icon"></span>
    </button>
-   <div class="collapse navbar-collapse" id="main-navigation">
-     <ul class="navbar-nav">
+   <div class="collapse navbars-collapse" id="main-navigation">
+     <ul class="navbars-nav">
       	<li class="nav-item">
           <a class="navlink" href="index.html"> Home </a>  
         </li>  
