--- a/ebook.html
+++ b/ebook.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TVCT9D2');</script>
+<!-- End Google Tag Manager -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,7 +16,7 @@ LASTING SOLUTION TO PROSTRATE ENLARGEMENT</title>
 <meta name="description" content=" learn how to shrink prostate enlargement, cure enlarged prostate, end painful urination and other Uti">
 <meta name ="keywords"
 content="prostate,prostate cure, prostate diaease,prostate enlargement,painful urination,urine,frequent urination,urine,prostatitis">
-
+<meta name="google-site-verification" content="vgA1bREs25Ir9dt-okE1W1crU0TemGlVudhgV79k9ss" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
 integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,12 +24,12 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
 <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-    <a class="whats-app" href="https://api.whatsapp.com/send?phone=2347086865133&text=Good%20day%20Are%20you%20intrested%20in%20getting%20your%20enlarged%20prostate%20shrink."
+    <a class="whats-app" href="https://api.whatsapp.com/send?phone=2349155038724&text=Good%20day%20Are%20you%20intrested%20in%20getting%20your%20enlarged%20prostate%20shrink."
       target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
    </a>
     <link rel ="canonical" href="blives.xyz/index.html"/>
-   <link rel="stylesheet" type="text/css" href="belives.css">
+   <link rel="stylesheet" type="text/css" href="blives.css">
      <script stype="text/javascript">
      function validateemail(){
     var x=document.Myform.email.value;
@@ -34,35 +41,35 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
      return false;
      }
      
-     function showForm() {
-     document.getElementById('formElement').style.display = 'block';
-     }
 
      </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-209765770-1">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-223067348-1">
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-209765770-1');
-  
+  gtag('config', 'UA-223067348-1');
 </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVCT9D2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
-<nav class="navbars navbar-expand-md">
-   <a class="navbars-brand" href="index.html">
+<nav class="navbar navbar-expand-md">
+   <a class="navbar-brand" href="index.html">
    <img class="logo" src="img/logo.png" alt="PROSTATE SOLUTION"/></a>
-        <button class="navbars-toggler navbars-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-      	   <span class="navbars-toggler-icon"></span>
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+      	   <span class="navbar-toggler-icon"></span>
    </button>
-   <div class="collapse navbars-collapse" id="main-navigation">
-     <ul class="navbars-nav">
+   <div class="collapse navbar-collapse" id="main-navigation">
+     <ul class="navbar-nav">
       	<li class="nav-item">
           <a class="navlink" href="index.html"> Home </a>  
         </li>  
@@ -75,6 +82,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
       </ul>
     </div>
 </nav> 
+
 <h3 class="gfonts">WARNING!!! DO NOT GET A<span style="color:red;"> PROSTATE DRUG OR SUPPLEMENT</span> UNTIL YOU READ THIS SHOCKING EBOOK</h3>
 <img class="cover" src="img/cover.jpg"><br>
 <p><b>IN THIS FREE EBOOK YOU WILL GET TO KNOW</b></p>
