--- a/Index.html
+++ b/Index.html
@@ -193,12 +193,7 @@ loop()
 <h6 class="bph"><b><center><strong>Little Known Prostate Normalising Therapy</center></b></strong></h6>
 <h2 class="therapy"><center> "PROSTATE SOLUTION"-A 21-Day Therapy For Enlarged Prostate</center></h2>
 <h6 class="bph"><b><center><strong>Recommended by Over 85% Of It Users</strong></center></center></b></h6>
-   <img class="brand" src="img/drugpic.jpg"/>
-<a href="https://api.whatsapp.com/send?phone=2349155038724&text=Good%20day%20Are%20you%20intrested%20in%20getting%20your%20enlarged%20prostate%20shrink.">
-<img src="img/whatsapp.png" alt="order through whatsapp"><br></a>
-<a href="ebook.html" >
- <img class="d-block w-100" src="img/Probook.png" alt="First slide">
-</a>
+   <img class="brand" src="img/psolution.jpg"/>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -220,7 +215,12 @@ loop()
     <span class="sr-only">Next</span>
   </a>
 </div>
+<a href="https://api.whatsapp.com/send?phone=2349155038724&text=Good%20day%20Are%20you%20intrested%20in%20getting%20your%20enlarged%20prostate%20shrink.">
+<img src="img/whatsapp.png" alt="order through whatsapp"><br></a>
 <div>
+<a href="ebook.html" >
+ <img class="d-block w-100" src="img/Probook.png" alt="First slide">
+</a>
 <h3 class="offer"> ENJOY MASSIVE DISCOUNT <br>
   <div>
   <h3><strike>1 BOTTLE NORMAL PRICE =  &#8358 40000</h3></strike>
