--- a/Index.html
+++ b/Index.html
@@ -364,9 +364,29 @@ sexual performance, and make
 you last longer? For an affordable, effective,
  and natural way to support your prostate health, try Prostate Solution. 
  Not only will your prostate thank you, but your family  will too. Prostate Solution is now offering 33% off. 
- <a class="buy" href="form.html" >Try it today</a>
+Try it today
    </b></p>
-  
+  <div class="testimonial">
+     <img src="img/tfake.jpg" alt="Avatar" style="width:90px">
+     <p class="words">
+     "This product is amazing! I no longer feel like I'm dying while urinating, and I am no longer having to 
+     use the bathroom every five
+     minutes. This  has done
+     amazing things for me, and 
+     I would highly recommend it to any of my friends or family."<br>
+     <span id="name" style="text-"> Ayodeji Emmanuel<br>Ilorin, Kwara State.</span>
+     </p>
+     
+     </div>
+     <div class="testimonial">
+     <img class="imgtest" src="img/police.png" alt="Avatar" style="width:90px">
+     <p class="words">"This  is simply amazing. No more burning sensation while urinating and no more 
+     frequent urination. I've tried a lot of prostrate
+     supplement and I can honestly say this is the best I've tried"<br>
+     <span id ="name">Amos Iyanda<br>Kano State</span>
+     </div><br>
+      </p>
+    </div>                                                    
 <h2>
  <p class="prostateSolution">We get it <br>Living with enlarge prostate is hard. Really Hard<br>We really understand how it feels to feel <b>PAIN WHILE URINATING</b><br><br>
  STRESSED AND UNABLE TO SLEEP BECAUSE OF THE NIGHT TIME BEDROOM TRIPS<br><br><br>
