--- a/Index.html
+++ b/Index.html
@@ -262,7 +262,7 @@
      <script type="text/javascript">000000
      function countdown() {
      const today = new Date();
-     var offerDate = new Date('15 January 2023');
+     var offerDate = new Date('20 January 2023');
      
      //If offer ends reset to new value
      if (today.getSeconds() == offerDate.getSeconds()) {
@@ -318,7 +318,7 @@
      minlenght="11" pattern="\d{11}" title="Please check your number well"  required/>
      </div>
      <div class="input-cnt">
-     <i class="material-icons">phone NoAgain</i>
+     <i class="material-icons">Another phone No</i>
      <input type="Tel"  name="Phone no" placeholder="07088888555" 
      minlenght="11" pattern="\d{11}" title="Please check your number well"  required/>
      </div>
@@ -546,7 +546,7 @@
      <script type="text/javascript">000000
      function countdown() {
      const today = new Date();
-     var offerDate = new Date('15 January 2023');
+     var offerDate = new Date('20 January 2023');
     
      //If offer ends reset to new value
      if (today.getSeconds() == offerDate.getSeconds()) {
@@ -601,7 +601,7 @@
      minlenght="11" pattern="\d{11}" title="Please check your number well"  required/>
      </div>
      <div class="input-cnt">
-     <i class="material-icons">phone NoAgain</i>
+     <i class="material-icons">Another Phone No</i>
      <input type="Tel"  name="Phone no" placeholder="07088888555" 
      minlenght="11" pattern="\d{11}" title="Please check your number well"  required/>
      </div>
